Fix composer layout on mobiles

--- a/src/styles/layouts/l-composer.scss
+++ b/src/styles/layouts/l-composer.scss
@@ -78,13 +78,13 @@
   }
 }
 
-@media screen and (min-width: $sidebar-width) {
+@media screen and (min-width: $sidebar-width * 2) {
   .composer-mobile-menu-button {
     display: none;
   }
 }
 
-@media screen and (max-width: $sidebar-width) {
+@media screen and (max-width: $sidebar-width * 2) {
   .l-composer {
     .composer-mobile-menu-button {
       z-index: 1;
@@ -101,6 +101,10 @@
 
     .composer-sidebar {
       width: 100%;
+    }
+
+    .composer-screen {
+      left: 100vw;
     }
 
     &.l-composer-compact .composer-mobile-menu-button {
